# Task-Bot-Manager

./: .gitignore  .replit  netlify.toml  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/ops-ui/: index.html  package.json  vite.config.ts
artifacts/ops-ui/.replit-artifact/: artifact.toml
artifacts/ops-ui/src/: App.tsx  index.css
artifacts/whatsapp-bot/: .env.example  README.md  checkout_inspections.py  damage_cases.py  database.py  hostfully.py  main.py  requirements.txt  schema.sql  schemas.py  supabase_client.py  whatsapp.py  whatsapp_bot.db
artifacts/whatsapp-bot/.replit-artifact/: artifact.edit.toml
attached_assets/: Pasted--event-message-syntax-error-at-or-near-id-93587fcb-d4b8_1779109353701.txt  Pasted-Add-the-Damage-Case-workflow-now-that-Hostfully-and-Wha_1779060499625.txt  Pasted-Update-the-Hostfully-checkout-sync-logic-for-our-real-w_1779114445658.txt  task_plan_to_main_1779109464622.avif
